--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/png" href="public/images/joystick.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
     <!-- Navbar -->
@@ -50,7 +51,7 @@
             </div>
             <div class="mb-6">
                 <h2 class="text-xl text-white font-semibold mb-1">Section &amp; Batch</h2>
-                <p class="text-gray-300">Section: 4DM<br>Batch: Spring 55</p>
+                <p class="text-gray-300">Section: 5DM<br>Batch:55</p>
             </div>
             <div class="mt-8">
                 <a href="../../index.html" class="inline-block bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded-full transition-all duration-300">Back to Home</a>
