--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -89,7 +89,7 @@
                 <div class="border-t border-gray-700 pt-4">
                     <div class="flex gap-2">
                         <input type="text" id="voucherInput" placeholder="Enter voucher code" 
-                            class="flex-grow bg-gray-800 text-white px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
+                            class="flex-grow bg-gray-800 text-white w-[30px] px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
                         <button onclick="applyVoucher()" 
                             class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg transition">
                             Apply
