--- a/src/html/about.html
+++ b/src/html/about.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="bg-gray-800 rounded-lg p-4 flex flex-col items-center">
                     <span class="text-lg text-red-400 font-bold">Mahi B Rahaman</span>
-                    <span class="text-gray-400">ID: c231161</span>
+                    <span class="text-gray-400">ID: C231161</span>
                 </div>
             </div>
             <div class="mb-6">
@@ -50,7 +50,7 @@
             </div>
             <div class="mb-6">
                 <h2 class="text-xl text-white font-semibold mb-1">Section &amp; Batch</h2>
-                <p class="text-gray-300">Section: 4DM<br>Batch: Spring 55</p>
+                <p class="text-gray-300">Section: 5DM<br>Batch: 55</p>
             </div>
             <div class="mt-8">
                 <a href="../../index.html" class="inline-block bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded-full transition-all duration-300">Back to Home</a>
